sdk-docs_versioned_docs/version-19.0.0/modules/API/Procedures/Types/Types.md
---
id: "Types"
title: "Module: Procedures Types"
sidebar_label: "Types"
---

## Enumerations

- [AllowanceOperation](../../../../enums/API/Procedures/Types/AllowanceOperation/AllowanceOperation.md)
- [ClaimOperation](../../../../enums/API/Procedures/Types/ClaimOperation/ClaimOperation.md)
- [InstructionAffirmationOperation](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md)
- [TransferRestrictionType](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md)

## Interfaces

- [AddAssetRequirementParams](../../../../interfaces/API/Procedures/Types/AddAssetRequirementParams/AddAssetRequirementParams.md)
- [AddClaimsParams](../../../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md)
- [AddInstructionsParams](../../../../interfaces/API/Procedures/Types/AddInstructionsParams/AddInstructionsParams.md)
- [AddInvestorUniquenessClaimParams](../../../../interfaces/API/Procedures/Types/AddInvestorUniquenessClaimParams/AddInvestorUniquenessClaimParams.md)
- [AffirmInstructionParams](../../../../interfaces/API/Procedures/Types/AffirmInstructionParams/AffirmInstructionParams.md)
- [AssetBase](../../../../interfaces/API/Procedures/Types/AssetBase/AssetBase.md)
- [ClaimClassicTickerParams](../../../../interfaces/API/Procedures/Types/ClaimClassicTickerParams/ClaimClassicTickerParams.md)
- [ClaimCountTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md)
- [ClaimPercentageTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md)
- [ConfigureDividendDistributionParams](../../../../interfaces/API/Procedures/Types/ConfigureDividendDistributionParams/ConfigureDividendDistributionParams.md)
- [ControllerTransferParams](../../../../interfaces/API/Procedures/Types/ControllerTransferParams/ControllerTransferParams.md)
- [CountTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md)
- [CreateAssetParams](../../../../interfaces/API/Procedures/Types/CreateAssetParams/CreateAssetParams.md)
- [CreateAssetWithTickerParams](../../../../interfaces/API/Procedures/Types/CreateAssetWithTickerParams/CreateAssetWithTickerParams.md)
- [CreateCheckpointScheduleParams](../../../../interfaces/API/Procedures/Types/CreateCheckpointScheduleParams/CreateCheckpointScheduleParams.md)
- [CreateGroupParams](../../../../interfaces/API/Procedures/Types/CreateGroupParams/CreateGroupParams.md)
- [CreateMultiSigParams](../../../../interfaces/API/Procedures/Types/CreateMultiSigParams/CreateMultiSigParams.md)
- [CreateTransactionBatchParams](../../../../interfaces/API/Procedures/Types/CreateTransactionBatchParams/CreateTransactionBatchParams.md)
- [CreateVenueParams](../../../../interfaces/API/Procedures/Types/CreateVenueParams/CreateVenueParams.md)
- [DecreaseAllowanceParams](../../../../interfaces/API/Procedures/Types/DecreaseAllowanceParams/DecreaseAllowanceParams.md)
- [EditClaimsParams](../../../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md)
- [ExecuteManualInstructionParams](../../../../interfaces/API/Procedures/Types/ExecuteManualInstructionParams/ExecuteManualInstructionParams.md)
- [IncreaseAllowanceParams](../../../../interfaces/API/Procedures/Types/IncreaseAllowanceParams/IncreaseAllowanceParams.md)
- [InvestInOfferingParams](../../../../interfaces/API/Procedures/Types/InvestInOfferingParams/InvestInOfferingParams.md)
- [InviteAccountParams](../../../../interfaces/API/Procedures/Types/InviteAccountParams/InviteAccountParams.md)
- [InviteExternalAgentParams](../../../../interfaces/API/Procedures/Types/InviteExternalAgentParams/InviteExternalAgentParams.md)
- [LaunchOfferingParams](../../../../interfaces/API/Procedures/Types/LaunchOfferingParams/LaunchOfferingParams.md)
- [LinkCaDocsParams](../../../../interfaces/API/Procedures/Types/LinkCaDocsParams/LinkCaDocsParams.md)
- [ModifyAssetTrustedClaimIssuersAddSetParams](../../../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersAddSetParams/ModifyAssetTrustedClaimIssuersAddSetParams.md)
- [ModifyAssetTrustedClaimIssuersRemoveParams](../../../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersRemoveParams/ModifyAssetTrustedClaimIssuersRemoveParams.md)
- [ModifyCaCheckpointParams](../../../../interfaces/API/Procedures/Types/ModifyCaCheckpointParams/ModifyCaCheckpointParams.md)
- [ModifyCorporateActionsAgentParams](../../../../interfaces/API/Procedures/Types/ModifyCorporateActionsAgentParams/ModifyCorporateActionsAgentParams.md)
- [ModifyInstructionAffirmationParams](../../../../interfaces/API/Procedures/Types/ModifyInstructionAffirmationParams/ModifyInstructionAffirmationParams.md)
- [ModifyMultiSigParams](../../../../interfaces/API/Procedures/Types/ModifyMultiSigParams/ModifyMultiSigParams.md)
- [ModifyPrimaryIssuanceAgentParams](../../../../interfaces/API/Procedures/Types/ModifyPrimaryIssuanceAgentParams/ModifyPrimaryIssuanceAgentParams.md)
- [ModifySignerPermissionsParams](../../../../interfaces/API/Procedures/Types/ModifySignerPermissionsParams/ModifySignerPermissionsParams.md)
- [MoveFundsParams](../../../../interfaces/API/Procedures/Types/MoveFundsParams/MoveFundsParams.md)
- [PayDividendsParams](../../../../interfaces/API/Procedures/Types/PayDividendsParams/PayDividendsParams.md)
- [PercentageTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md)
- [RedeemTokensParams](../../../../interfaces/API/Procedures/Types/RedeemTokensParams/RedeemTokensParams.md)
- [RegisterIdentityParams](../../../../interfaces/API/Procedures/Types/RegisterIdentityParams/RegisterIdentityParams.md)
- [RemoveAssetRequirementParams](../../../../interfaces/API/Procedures/Types/RemoveAssetRequirementParams/RemoveAssetRequirementParams.md)
- [RemoveCheckpointScheduleParams](../../../../interfaces/API/Procedures/Types/RemoveCheckpointScheduleParams/RemoveCheckpointScheduleParams.md)
- [RemoveCorporateActionParams](../../../../interfaces/API/Procedures/Types/RemoveCorporateActionParams/RemoveCorporateActionParams.md)
- [RemoveExternalAgentParams](../../../../interfaces/API/Procedures/Types/RemoveExternalAgentParams/RemoveExternalAgentParams.md)
- [RemoveSecondaryAccountsParams](../../../../interfaces/API/Procedures/Types/RemoveSecondaryAccountsParams/RemoveSecondaryAccountsParams.md)
- [RenamePortfolioParams](../../../../interfaces/API/Procedures/Types/RenamePortfolioParams/RenamePortfolioParams.md)
- [ReserveTickerParams](../../../../interfaces/API/Procedures/Types/ReserveTickerParams/ReserveTickerParams.md)
- [RevokeClaimsParams](../../../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)
- [ScopeClaimProof](../../../../interfaces/API/Procedures/Types/ScopeClaimProof/ScopeClaimProof.md)
- [SetAllowanceParams](../../../../interfaces/API/Procedures/Types/SetAllowanceParams/SetAllowanceParams.md)
- [SetAssetDocumentsParams](../../../../interfaces/API/Procedures/Types/SetAssetDocumentsParams/SetAssetDocumentsParams.md)
- [SetAssetRequirementsParams](../../../../interfaces/API/Procedures/Types/SetAssetRequirementsParams/SetAssetRequirementsParams.md)
- [SetClaimCountTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md)
- [SetClaimPercentageTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md)
- [SetCountTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md)
- [SetCustodianParams](../../../../interfaces/API/Procedures/Types/SetCustodianParams/SetCustodianParams.md)
- [SetGroupPermissionsParams](../../../../interfaces/API/Procedures/Types/SetGroupPermissionsParams/SetGroupPermissionsParams.md)
- [SetPercentageTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetPercentageTransferRestrictionsParams/SetPercentageTransferRestrictionsParams.md)
- [SetPermissionGroupParams](../../../../interfaces/API/Procedures/Types/SetPermissionGroupParams/SetPermissionGroupParams.md)
- [SubsidizeAccountParams](../../../../interfaces/API/Procedures/Types/SubsidizeAccountParams/SubsidizeAccountParams.md)
- [TransactionsParams](../../../../interfaces/API/Procedures/Types/TransactionsParams/TransactionsParams.md)
- [TransferAssetOwnershipParams](../../../../interfaces/API/Procedures/Types/TransferAssetOwnershipParams/TransferAssetOwnershipParams.md)
- [TransferPolyxParams](../../../../interfaces/API/Procedures/Types/TransferPolyxParams/TransferPolyxParams.md)
- [TransferRestriction](../../../../interfaces/API/Procedures/Types/TransferRestriction/TransferRestriction.md)
- [TransferTickerOwnershipParams](../../../../interfaces/API/Procedures/Types/TransferTickerOwnershipParams/TransferTickerOwnershipParams.md)
- [TxGroupParams](../../../../interfaces/API/Procedures/Types/TxGroupParams/TxGroupParams.md)
- [WaivePermissionsParams](../../../../interfaces/API/Procedures/Types/WaivePermissionsParams/WaivePermissionsParams.md)

## Type Aliases

### AddAssetStatParams

Ƭ **AddAssetStatParams**: { `ticker`: `string`  } & [`AddCountStatParams`](Types.md#addcountstatparams) \| [`AddPercentageStatParams`](Types.md#addpercentagestatparams) \| [`AddClaimCountStatParams`](Types.md#addclaimcountstatparams) \| [`AddClaimPercentageStatParams`](Types.md#addclaimpercentagestatparams)

#### Defined in

[api/procedures/types.ts:111](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L111)

___

### AddClaimCountStatParams

Ƭ **AddClaimCountStatParams**: [`ClaimCountStatInput`](../../../Types/Types.md#claimcountstatinput) & { `type`: [`ScopedCount`](../../../../enums/Types/StatType/StatType.md#scopedcount)  }

#### Defined in

[api/procedures/types.ts:103](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L103)

___

### AddClaimCountTransferRestrictionParams

Ƭ **AddClaimCountTransferRestrictionParams**: [`ClaimCountTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md) & { `type`: [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount)  }

#### Defined in

[api/procedures/types.ts:199](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L199)

___

### AddClaimPercentageStatParams

Ƭ **AddClaimPercentageStatParams**: [`StatClaimIssuer`](../../../../interfaces/Types/StatClaimIssuer/StatClaimIssuer.md) & { `type`: [`ScopedBalance`](../../../../enums/Types/StatType/StatType.md#scopedbalance)  }

#### Defined in

[api/procedures/types.ts:107](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L107)

___

### AddClaimPercentageTransferRestrictionParams

Ƭ **AddClaimPercentageTransferRestrictionParams**: [`ClaimPercentageTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md) & { `type`: [`ClaimPercentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimpercentage)  }

#### Defined in

[api/procedures/types.ts:203](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L203)

___

### AddCountStatParams

Ƭ **AddCountStatParams**: [`AddCountStatInput`](../../../../interfaces/Types/AddCountStatInput/AddCountStatInput.md) & { `type`: [`Count`](../../../../enums/Types/StatType/StatType.md#count)  }

#### Defined in

[api/procedures/types.ts:95](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L95)

___

### AddCountTransferRestrictionParams

Ƭ **AddCountTransferRestrictionParams**: [`CountTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md) & { `type`: [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count)  }

#### Defined in

[api/procedures/types.ts:191](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L191)

___

### AddInstructionParams

Ƭ **AddInstructionParams**: { `legs`: { `amount`: `BigNumber` ; `asset`: `string` \| [`Asset`](../../../../classes/API/Entities/Asset/Asset.md) ; `from`: [`PortfolioLike`](../../../Types/Types.md#portfoliolike) ; `to`: [`PortfolioLike`](../../../Types/Types.md#portfoliolike)  }[] ; `memo?`: `string` ; `tradeDate?`: `Date` ; `valueDate?`: `Date`  } & { `endBlock?`: `BigNumber`  } \| { `endAfterBlock?`: `BigNumber`  }

#### Defined in

[api/procedures/types.ts:420](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L420)

___

### AddInstructionWithVenueIdParams

Ƭ **AddInstructionWithVenueIdParams**: [`AddInstructionParams`](Types.md#addinstructionparams) & { `venueId`: `BigNumber`  }

#### Defined in

[api/procedures/types.ts:464](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L464)

___

### AddPercentageStatParams

Ƭ **AddPercentageStatParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`Balance`](../../../../enums/Types/StatType/StatType.md#balance) |

#### Defined in

[api/procedures/types.ts:99](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L99)

___

### AddPercentageTransferRestrictionParams

Ƭ **AddPercentageTransferRestrictionParams**: [`PercentageTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md) & { `type`: [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage)  }

#### Defined in

[api/procedures/types.ts:195](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L195)

___

### AddRestrictionParams

Ƭ **AddRestrictionParams**<`T`\>: `Omit`<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`AddCountTransferRestrictionParams`](Types.md#addcounttransferrestrictionparams) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`AddPercentageTransferRestrictionParams`](Types.md#addpercentagetransferrestrictionparams) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`AddClaimCountTransferRestrictionParams`](Types.md#addclaimcounttransferrestrictionparams) : [`AddClaimPercentageTransferRestrictionParams`](Types.md#addclaimpercentagetransferrestrictionparams), ``"type"``\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:56](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L56)

___

### GetTransferRestrictionReturnType

Ƭ **GetTransferRestrictionReturnType**<`T`\>: [`ActiveTransferRestrictions`](../../../../interfaces/Types/ActiveTransferRestrictions/ActiveTransferRestrictions.md)<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`CountTransferRestriction`](../../../../interfaces/Types/CountTransferRestriction/CountTransferRestriction.md) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`PercentageTransferRestriction`](../../../../interfaces/Types/PercentageTransferRestriction/PercentageTransferRestriction.md) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`ClaimCountTransferRestriction`](../../../../interfaces/Types/ClaimCountTransferRestriction/ClaimCountTransferRestriction.md) : [`ClaimPercentageTransferRestriction`](../../../../interfaces/Types/ClaimPercentageTransferRestriction/ClaimPercentageTransferRestriction.md)\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:78](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L78)

___

### ModifyAssetParams

Ƭ **ModifyAssetParams**: { `fundingRound?`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: ``true`` ; `name`: `string`  } \| { `fundingRound?`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible`: ``true`` ; `name?`: `string`  } \| { `fundingRound`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: ``true`` ; `name?`: `string`  } \| { `fundingRound?`: `string` ; `identifiers`: [`SecurityIdentifier`](../../../../interfaces/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: ``true`` ; `name?`: `string`  }

#### Defined in

[api/procedures/types.ts:503](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L503)

___

### ModifyCaDefaultConfigParams

Ƭ **ModifyCaDefaultConfigParams**: { `defaultTaxWithholding`: `BigNumber` ; `targets?`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings?`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[]  } \| { `defaultTaxWithholding?`: `BigNumber` ; `targets`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings?`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[]  } \| { `defaultTaxWithholding?`: `BigNumber` ; `targets?`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[]  }

#### Defined in

[api/procedures/types.ts:642](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L642)

___

### ModifyClaimsParams

Ƭ **ModifyClaimsParams**: [`AddClaimsParams`](../../../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md) \| [`EditClaimsParams`](../../../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md) \| [`RevokeClaimsParams`](../../../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)

#### Defined in

[api/procedures/types.ts:366](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L366)

___

### ModifyComplianceRequirementParams

Ƭ **ModifyComplianceRequirementParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `conditions` | [`InputCondition`](../../../Types/Types.md#inputcondition)[] | array of conditions to replace the existing array of conditions for the requirement (identified by `id`).   Conditions within a requirement are *AND* between them. This means that in order   for a transfer to comply with this requirement, it must fulfill *ALL* conditions |
| `id` | `BigNumber` | ID of the Compliance Requirement |

#### Defined in

[api/procedures/types.ts:591](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L591)

___

### ModifyOfferingTimesParams

Ƭ **ModifyOfferingTimesParams**: { `end`: `Date` \| ``null`` ; `start?`: `Date`  } \| { `end?`: `Date` \| ``null`` ; `start`: `Date`  } \| { `end`: `Date` \| ``null`` ; `start`: `Date`  }

#### Defined in

[api/procedures/types.ts:865](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L865)

___

### ModifyVenueParams

Ƭ **ModifyVenueParams**: { `description?`: `string` ; `type`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)  } \| { `description`: `string` ; `type?`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)  } \| { `description`: `string` ; `type`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)  }

#### Defined in

[api/procedures/types.ts:813](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L813)

___

### RegisterMetadataParams

Ƭ **RegisterMetadataParams**: { `name`: `string` ; `specs`: [`MetadataSpec`](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md)  } \| { `details?`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails) ; `name`: `string` ; `specs`: [`MetadataSpec`](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md) ; `value`: `string`  }

#### Defined in

[api/procedures/types.ts:984](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L984)

___

### RemoveAssetStatParams

Ƭ **RemoveAssetStatParams**: { `ticker`: `string`  } & [`RemoveCountStatParams`](Types.md#removecountstatparams) \| [`RemoveBalanceStatParams`](Types.md#removebalancestatparams) \| [`RemoveScopedCountParams`](Types.md#removescopedcountparams) \| [`RemoveScopedBalanceParams`](Types.md#removescopedbalanceparams)

#### Defined in

[api/procedures/types.ts:88](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L88)

___

### RemoveBalanceStatParams

Ƭ **RemoveBalanceStatParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`Balance`](../../../../enums/Types/StatType/StatType.md#balance) |

#### Defined in

[api/procedures/types.ts:122](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L122)

___

### RemoveCountStatParams

Ƭ **RemoveCountStatParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`Count`](../../../../enums/Types/StatType/StatType.md#count) |

#### Defined in

[api/procedures/types.ts:118](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L118)

___

### RemoveScopedBalanceParams

Ƭ **RemoveScopedBalanceParams**: [`StatClaimIssuer`](../../../../interfaces/Types/StatClaimIssuer/StatClaimIssuer.md) & { `type`: [`ScopedBalance`](../../../../enums/Types/StatType/StatType.md#scopedbalance)  }

#### Defined in

[api/procedures/types.ts:130](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L130)

___

### RemoveScopedCountParams

Ƭ **RemoveScopedCountParams**: [`StatClaimIssuer`](../../../../interfaces/Types/StatClaimIssuer/StatClaimIssuer.md) & { `type`: [`ScopedCount`](../../../../enums/Types/StatType/StatType.md#scopedcount)  }

#### Defined in

[api/procedures/types.ts:126](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L126)

___

### SetAssetStatParams

Ƭ **SetAssetStatParams**<`T`\>: `Omit`<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`AddCountStatParams`](Types.md#addcountstatparams) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`AddPercentageStatParams`](Types.md#addpercentagestatparams) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`AddClaimCountStatParams`](Types.md#addclaimcountstatparams) : [`AddClaimPercentageStatParams`](Types.md#addclaimpercentagestatparams), ``"type"``\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:134](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L134)

___

### SetMetadataParams

Ƭ **SetMetadataParams**: { `details?`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails) ; `value`: `string`  } \| { `details`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails)  }

#### Defined in

[api/procedures/types.ts:980](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L980)

___

### SetRestrictionsParams

Ƭ **SetRestrictionsParams**<`T`\>: `Omit`<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`SetCountTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`SetPercentageTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetPercentageTransferRestrictionsParams/SetPercentageTransferRestrictionsParams.md) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`SetClaimCountTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md) : [`SetClaimPercentageTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md), ``"type"``\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:67](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/api/procedures/types.ts#L67)
